# cointracker-infra-security-takehome-Noah-Griego

./: .env.example  README.md
do-tracker-app/: Dockerfile  auth.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_suite.py
workspaces/database/: db.tf  outputs.tf
