[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A FastAPI todo application"
authors = ["Dev Team <dev@company.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
pydantic = "^2.0.0"
httpx = "^0.27.0"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.30.0"
requests = "^2.32.0"
faker = "^33.0.0"
PyYAML = "^6.0.0"
Jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^6.0.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
